# elixir-api

./: .gitignore  README.md  elixir.ini  history.sqlite  install.sh  pyproject.toml  run_elixir.sh  run_server.sh
elixir_api/: chainlit_client.py  chat.py  file_handel.py  helper.py  history.py  info.py  init.py  main.py  session.py  settings.py  upload_file.py
