[tool.poetry]
name = "elixir-api"
version = "0.1.0"
description = ""
authors = ["brijesh <brijeshkrishnaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
requests = "^2.31.0"
pypdf = "^4.2.0"
qdrant-client = "^1.8.2"
uvicorn = "^0.29.0"
langchain-community = "^0.0.31"
langchain = "^0.1.14"
sentence-transformers = "^2.6.1"
python-multipart = "^0.0.9"
gradio-pdf = "^0.0.7"
gradio = "^4.26.0"
pdf2image = "^1.17.0"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
